@@ -39,3 +39,5 @@ turn-off-updates-w2=Are you sure?  We recommend leaving this option on.  It is h
 cryptAndSignFailedPass=Sorry, but sign and encryt failled.
 cryptAndSignFailed=Sorry, but your password is wrong.
 validSignInCrypt=A valid sign was found in encrypted text, with a key of
+GMailSAC=Sign and Crypt
+GMailSACS=Sign, Crypt and Send
