@@ -32,3 +32,5 @@
 <!ENTITY key-expire "Expire">
 <!ENTITY pane4.title "Gpg">
 <!ENTITY gpg-add-options "Add arguements to gpg's commande line : (Warning ! Can break FireGPG ! Have a look at doc.)">
+<!ENTITY gmail-buton-signcrypt-checkbox "Sign and Crypt">
+<!ENTITY gmail-buton-signcryptsend-checkbox "Sign, Crypt and Send">
