@@ -39,3 +39,5 @@ turn-off-updates-w2=Êtes vous vraiement certain ? Nous recommandons de ne pas d
 cryptAndSignFailedPass=Le chiffrement et la signature ont échouées car le mot de passe est incorrect.
 cryptAndSignFailed=Le chiffrement et la signature ont échoués.
 validSignInCrypt=Une signature valide à été trouvé dans le texte chiffré, apartenant à
+GMailSAC=Signer et Chiffrer
+GMailSACS=Signer, Chiffrer et envoyer
